<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.deannhom.fragment.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.deannhom.fragment.History.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.deannhom.fragment.Favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.deannhom.fragment.Account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_navigation_edit_info"
            app:destination="@id/navigation_edit_info" />
        <action
            android:id="@+id/action_navigation_account_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_info"
        android:name="com.example.deannhom.fragment.EditInfo.EditInfoFragment"
        android:label="@string/title_edit_info"
        tools:layout="@layout/fragment_edit_info">
        <action
            android:id="@+id/action_navigation_edit_info_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.deannhom.fragment.Register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.deannhom.fragment.Login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

</navigation>