<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:paddingTop="48sp"
    tools:context=".fragment.Login.LoginFragment">

    <LinearLayout
        android:id="@+id/layoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/inconsolata"
            android:gravity="center"
            android:text="@string/sign_in"

            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:fontFamily="@font/inconsolata"
            android:gravity="center"
            android:text="@string/welcome_back"

            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"

        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:shapeAppearanceOverlay="@style/cornerTopOnly">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/email"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:startIconDrawable="@drawable/baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:autofillHints="emailAddress"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/password"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/baseline_key_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:autofillHints="password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end">

                    <Button
                        android:id="@+id/btnForgotPass"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/inconsolata"
                        android:text="@string/forgot_pass"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:backgroundTint="#4494df"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textSize="25sp"

                    app:cornerRadius="30dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quickLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:cardBackgroundColor="@color/quickLogin"
                    app:shapeAppearanceOverlay="@style/cornerTopOnly">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp">

                        <Button
                            android:id="@+id/btnGoogleLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#d9d9d9"
                            android:fontFamily="@font/inconsolata"
                            android:text="@string/login_with_google"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            app:cornerRadius="30dp"

                            app:icon="@drawable/google_icon"
                            app:iconTint="@null" />

                        <Button
                            android:id="@+id/btnFacebookLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#d9d9d9"
                            android:fontFamily="@font/inconsolata"
                            android:text="@string/login_with_facebook"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            app:cornerRadius="30dp"

                            app:icon="@drawable/facebook_icon"
                            app:iconTint="@null" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/inconsolata"
                                android:gravity="center"
                                android:text="@string/new_account" />

                            <Button
                                android:id="@+id/btnSignUp"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inconsolata"
                                android:gravity="end|center"
                                android:text="@string/sign_up_here"
                                android:textAllCaps="false"
                                android:textColor="@color/text" />

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>